--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
         <p class="Evan">Good morning.</p>
         <p class="Max">Hello.</p>
         <p class="Mael">We are going to debate on the subject of video games, I will start by asking you a question. Are video games a waste of time for you?</p>
-        <p class="Evan">In my opinion, video games are clearly a waste of time, indeed, these games are useless, brainless, and make people stupid and violent.</p>
-        <p class="Mael">Wow! I mean, Mael what do you think of what evan said? Is it a stereotype in your opinion?</p>
-        <p class="Max">I agree with you up to a point. From my point of view, some video games can make some people violent, especially children, which is why some games have an age limit. Howover, from my point of view, video games improve players' literacy through regular reading of instructions, game history and blogs, but also their thinking and creativity through some games.</p>
+        <p class="Evan">In my opinion, video games are clearly a waste of time, indeed, these games are useless, brainless, and make people stupid and violent, many of these games re-enact wars, these are dramatic events and far from fun, I don't understand how it can be useful or even enjoyable to kill people over and over again, althougth it is virtually.</p>
+        <p class="Mael">Wow! I mean, Max what do you think of what Evan said? Is it a stereotype in your opinion?</p>
+        <p class="Max">I agree with him up to a point. From my point of view, some video games can make some people violent, especially children, which is why some games have an age limit. Howover, from my point of view, video games improve players' literacy through regular reading of instructions, game history and blogs, but also their thinking and creativity through some games.</p>
         <p class="Evan">When you say video games can improve thinking, do you mean some games make you more intelligent?</p>
         <p class="Max">Not really, what I mean is games, especially strategy games, force you to think about complex things and look for solutions for a long time and all the time, which is obviously very useful, especially in studies, when you have to solve a problem.</p>
-        <p class="Mael">Okay, I understand what you're saying, but in spite of these positive points, does spending a lot of time in front of video games have a negative impact on the players?</p>
-        <p class="Evan">I think that yes, spending a lot of time playing video games can not only damage your eyes, but also prevent you from making social bonds because you go out less. Thus, this can easily impact the mental well-being of the player and destroy them from the inside.</p>
+        <p class="Mael">Okay, I understand what you're saying, but in spite of these positive points, do you think video games are addictive and what are the negative impacts of this addiction on players?</p>
+        <p class="Evan">I think that yes, and spending a lot of time playing video games can not only damage your eyes, but also prevent you from making social bonds because you go out less. Thus, this can easily impact the mental well-being of the player and destroy them from the inside.</p>
+        <p class="Max">I agree with you, indeed some people can become addicted, but if you are sensible, video games can help the shy ones to create relationships online and consequently be more open in real life, and they can enable the players to escape from reality and the difficult emotions that come with it.</p>
+        <p class="Evan">I understand your point (of view?), but for me online friendships are biased and can be dangerous</p>
+        <p class="Mael">Thanks to both of you, in summary video games can be dangerous if one becomes addicted they can turn people inward and make them violent, but to a certain extent they enable one to improve one's literacy, one's reflexion but also to be happier and more open in social relationships.</p>
     </div>
 </body>
 </html>
